# Browser_Sprouts

./: .gitignore  FUNCTIONS.md  HANDOFF.md  LICENSE  README.md  README.txt  Sprouts.lnk  index.html  package-lock.json  package.json  play.bat  runTest.bat  stalks-original.ipynb  tsconfig.json  vite.config.js  vite.voronoiTest.config.js  voronoiExample.json  voronoiTest.html
notes/: FUNCTIONS.md  HANDOFF.md  advanced_collections_plan.md  phase2_move_engine_plan.md  shue_paper_notes.md  stalks_6spot_results.md  stalks_old_code_notes.md
scripts/: filterLives.cjs
src/: main.ts  voronoiTest.ts
src/data/: collectGenomes.json
src/debug/: flags.ts  moveLog.ts
src/dev/: soundnessSweep.ts
src/engine/: faceCheck.ts  moveTranslation.ts  occurrenceMap.ts  stalks.ts  stalksWasm.d.ts  stalksWasm.js  trackedGame.ts
stalks/: CMakeLists.txt  build.bat  build_log.txt  build_wasm.bat
stalks/saves/: 2_spot_master_exact.sprout  2_spot_master_quick.sprout  3_spot_master_exact.sprout  3_spot_master_quick.sprout  4_spot_master_exact.sprout  4_spot_master_quick.sprout  5_spot_master_exact.sprout  5_spot_master_quick.sprout
stalks/src/: analyze.cpp  analyze.hpp  boundary.cpp  boundary.hpp  canon.cpp  canon.hpp  collections.cpp  collections.hpp  encoding.cpp  encoding.hpp  graph.cpp  graph.hpp  json_util.hpp  moves.cpp  moves.hpp  position.cpp  position.hpp  savefile.cpp  savefile.hpp  tokens.hpp  unionfind.hpp  wasm_api.cpp
stalks/tests/: test_main.cpp
stalks/tools/: collect_genetics.cpp  dump_child_nimbers.cpp  dump_master_meta.cpp  explain_move.cpp  query_position.cpp
(+26 files in other folders)
